--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <title>Fluid Gallery HTML5 CSS3 Template</title>
+    <title>Cat Gallery</title>
 
     <!-- load stylesheets -->
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600">  
@@ -55,7 +55,6 @@
                 <nav class="navbar">
                     <div class="tm-navbar-bg">
                         
-                        <a class="navbar-brand text-uppercase" href="#"><i class="fa fa-picture-o tm-brand-icon"></i>Fluid Gallery</a>
 
                         <button class="navbar-toggler hidden-lg-up" type="button" data-toggle="collapse" data-target="#tmNavbar">
                             &#9776;
@@ -63,7 +62,7 @@
                         <div class="collapse navbar-toggleable-md text-xs-center text-uppercase tm-navbar" id="tmNavbar">
                             <ul class="nav navbar-nav">
                                 <li class="nav-item active selected">
-                                    <a class="nav-link" href="#0" data-no="1">1st fluid <span class="sr-only">(current)</span></a>
+                                    <a class="nav-link" href="#0" data-no="1">CATS <span class="sr-only">(current)</span></a>
                                 </li>                                
                                 <li class="nav-item">
                                     <a class="nav-link" href="#0" data-no="5">Message</a>
@@ -86,11 +85,11 @@
                                 <!-- Gallery One pop up connected with JS code below -->
                                     <div class="grid-item">
                                         <figure class="effect-sadie">
-                                            <img src="img/tm-img-01-tn.jpg" alt="Image" class="img-fluid tm-img">
+                                            <img src="img/timg1布偶猫.jpg" alt="Image" class="img-fluid tm-img">
                                             <figcaption>
                                                 <h2 class="tm-figure-title">Image <span><strong>One</strong></span></h2>
                                                 <p class="tm-figure-description">Set true or false in HTML script tag for this page black and white.</p>
-                                                <a href="img/tm-img-01.jpg">View more</a>
+                                                <a href="img/timg1布偶猫.jpg">View more</a>
                                             </figcaption>           
                                         </figure>
                                     </div>
