--- a/index.html
+++ b/index.html
@@ -55,6 +55,7 @@
                 <nav class="navbar">
                     <div class="tm-navbar-bg">
                         
+                        <a class="navbar-brand text-uppercase" href="#"><i class="fa fa-picture-o tm-brand-icon"></i>Cat Gallery</a>
 
                         <button class="navbar-toggler hidden-lg-up" type="button" data-toggle="collapse" data-target="#tmNavbar">
                             &#9776;
